--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/MainMenuItems/_CaseListMenu.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/MainMenuItems/_CaseListMenu.cshtml
@@ -1,10 +1,13 @@
 ﻿@using DH.Helpdesk.Common.Enums;
 @model DH.Helpdesk.SelfService.Models.Shared.LayoutViewModel
 
+@{
+    var actionName = Model.IsMultiCustomerSearchEnabled ? "MultiCustomerUserCases" : "UserCases";
+}
 @if (Model.CurrentCustomer != null && Model.CurrentCustomer.ShowCasesOnExternalPage != 0)
 {
     <li class="blue">
-        <a href="@Url.Action("UserCases", "case", new { customerId = Model.CustomerId, area = "" })">
+        <a href="@Url.Action(actionName, "case", new { customerId = Model.CustomerId, area = "" })">
             <i class="fa fa-clock-o mnu-fa"></i><br />            
             @if (Model.AppType == ApplicationTypes.LineManager)
             {
