--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
@@ -945,6 +945,9 @@ a.error, input[type=¨button].error .btn
     width: 90%!important;
 }
 
+.padding10 {
+    padding: 10px;
+}
 .padding20 {
     padding: 20px;
 }
@@ -1067,4 +1070,31 @@ div .multitext i {
 
 .messageIcon {    
     width: 60px;  
+}
+
+.searchGroup {
+    margin: 20px 0;
+}
+
+.searchGroupCaption,
+.searchGroupCaptionLoading {
+    padding: 10px 20px;
+    border-bottom: dotted 1px #828282;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.searchGroupCaption {
+    background: #f0f0f0;
+}
+
+.searchGroupCaptionLoading {
+    background: #FFF281;
+}
+
+.searchGroupCaption a,
+.searchGroupCaptionLoading a
+{
+    color: #000;   
+    text-decoration: none;
 }
