[FIX] fixed Product area selected and saved item disappears if user group restriction is changed for it.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_Input.cshtml
@@ -1021,7 +1021,7 @@
                                                     </button>
                                                     <ul class="dropdown-menu" style="z-index:99999999999;">
                                                         <li><a href="#">@Translation.Get("--")</a></li>
-                                                        @Html.ProductAreaDropdownButtonString(Model.productAreas)
+                                                        @Html.ProductAreaDropdownButtonString(Model.productAreas, true, Model.case_.ProductArea_Id)
                                                     </ul>
                                                     @Html.HiddenFor(model => model.case_.ProductArea_Id, new { @class = "product-area-id" })
                                                 </div>
